- added /me Mock API - added /verify/phone/{phoneNum} Mock API - added /verify/phone/{phoneNum}/code/{code} Mock API - added /account Mock API - added /login Mock API
