# server/api/controllers/account/router.js
@@ -3,4 +3,8 @@ import controller from './controller';
 
 export default express
   .Router()
-  .get('/me', controller.me);
+  .get('/me', controller.me)
+  .post('/verify/phone/:phoneNum', controller.verifyPhone)
+  .post('/verify/phone/:phoneNum/code/:code', controller.verifyCode)
+  .post('/', controller.createAccount)
+    .post('/login', controller.login);
